--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://localhost:1313/"
+baseURL = "https://cpaelzer.github.io/"
 languageCode = "en-us"
 title = "Pälzer"
 theme = "minimal"
