--- a/config.toml
+++ b/config.toml
@@ -30,9 +30,14 @@ googleAnalytics = ""
     weight = 2
 
 [[menu.main]]
+    url = "/about"
+    name = "About"
+    weight = 3
+
+[[menu.main]]
     url = "/public_gpg.txt"
     name = "GPG Key"
-    weight = 3
+    weight = 4
 
 # Social icons to be shown on the right-hand side of the navigation bar
 # The "name" field should match the name of the icon to be used
