--- a/config.toml
+++ b/config.toml
@@ -21,18 +21,23 @@ googleAnalytics = ""
 
 [[menu.main]]
     url = "/blogs/"
-    name = "Blog"
+    name = "Tech"
     weight = 1
+
+[[menu.main]]
+    url = "/bbq/"
+    name = "BBQ"
+    weight = 2
 
 [[menu.main]]
     url = "/about"
     name = "About"
-    weight = 2
+    weight = 3
 
 [[menu.main]]
     url = "/public_gpg.txt"
     name = "GPG Key"
-    weight = 3
+    weight = 4
 
 # Social icons to be shown on the right-hand side of the navigation bar
 # The "name" field should match the name of the icon to be used
