re-enable and un-draft BBQ
Signed-off-by: Christian Ehrhardt <christian.ehrhardt@canonical.com>

--- a/config.toml
+++ b/config.toml
@@ -24,10 +24,10 @@ googleAnalytics = ""
     name = "Tech"
     weight = 1
 
-#[[menu.main]]
-#    url = "/bbq/"
-#    name = "BBQ"
-#    weight = 2
+[[menu.main]]
+    url = "/bbq/"
+    name = "BBQ"
+    weight = 2
 
 [[menu.main]]
     url = "/about"
